syntax = "proto3";
package models;
option go_package = "./models";

import "github.com/infobloxopen/protoc-gen-gorm/options/gorm.proto";

message AddressContractCountIndex {
  option (gorm.opts) = {ormable: true};

  string public_key = 1 [(gorm.field).tag = {primary_key: true}];
}
