syntax = "proto3";
package models;
option go_package = "./models";

import "github.com/infobloxopen/protoc-gen-gorm/options/gorm.proto";

message AddressCount {
  option (gorm.opts) = {ormable: true};

  string address = 1 [(gorm.field).tag = {index: "address_count_idx_address"}];

  // Postres primary key
  // NOTE: also use as count
  uint64 id = 2;
}
